Table users_therapists {
  id uuid [pk, unique, not null, default: `gen_random_uuid()`]
  user_id uuid [not null]
  name VARCHAR(50) [not null]
  email VARCHAR(50)
  phone VARCHAR(50)
  free_from DATE
  therapy_types "VARCHAR(50)[]"
  note TEXT
  created_at TIMESTAMP [default: `now()`]

  Indexes {
    (id, user_id) [unique]
  }
}

Table users_call_times {
  therapist_id uuid [not null]
  from VARCHAR(5) [not null]
  to VARCHAR(5) [not null]
  weekday VARCHAR(2) [not null]
  reminder BOOLEAN [default: FALSE]

  Indexes {
    (therapist_id, from)
  }
}

Table users_addresses {
  therapist_id uuid [unique]
  street VARCHAR(255)
  number VARCHAR(8)
  city VARCHAR(50)
  postal_code VARCHAR(10)

  Indexes {
    therapist_id 
  }
}

Table shared_therapists {
  id uuid [pk, unique, not null, default: `gen_random_uuid()`]
  name VARCHAR(50) [not null]
  email VARCHAR(50)
  phone VARCHAR(50)
  therapy_types "VARCHAR(50)[]"
  
  Indexes {
    name
  }
}

Table shared_call_times {
  therapist_id uuid [not null]
  from VARCHAR(5) [not null]
  to VARCHAR(5) [not null]
  weekday VARCHAR(2) [not null]

  Indexes {
    therapist_id
  }
}

Table shared_addresses {
  therapist_id uuid [unique]
  street VARCHAR(255)
  number VARCHAR(8)
  city VARCHAR(50)
  postal_code VARCHAR(10)

  Indexes {
    therapist_id 
  }
}

Table subscriptions {
  id uuid [pk, unique, not null, default: `gen_random_uuid()`]
  user_id uuid [unique, not null]
  subscription JSONB [unique, not null]
}

Table users {
  id uuid [pk, unique, not null, default: `gen_random_uuid()`]
  name VARCHAR(30)
  secret uuid [unique, default: `gen_random_uuid()`]
  call_precaution_time SMALLINT [default: 15, not null]
  created_at TIMESTAMP [default: `now()`]
}


Ref: users.id < users_therapists.user_id [delete: cascade]
Ref: users.id < subscriptions.user_id [delete: cascade]

Ref: users_therapists.id <  users_call_times.therapist_id [delete: cascade]
Ref: users_therapists.id - users_addresses.therapist_id [delete: cascade]

Ref: shared_therapists.id - shared_addresses.therapist_id [delete: cascade]
Ref: shared_therapists.id < shared_call_times.therapist_id [delete: cascade]